tests/cases/errors/cpp_emit_unsupported_binary_op/main.sv
module Top;
  int a;
  int b;
  int r;
  initial begin
    r = (a === b);
  end
endmodule
